add error handling

--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
 JWT_SECRET=mkamsdlkasm1@asdsadasdaSADSADA
 JWT_EXPIRATION_HOURS=1
 
-
 SALT_AMOUNT=10
+
+# mongo
+MONGO_DB_PASSOWRD = iGdoVpvUIBU3Cuth
+
+# postgre
+DB_NAME = postgres
+DB_USERNAME = root
+DB_PASSWORD = root
+DB_HOST = localhost
